Updated bullet formatting in Data Assessment lists

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -488,39 +488,45 @@
     "<ul> \n",
     "    <p>\n",
     "        <li><em>tweet_data_df_clean:</em>\n",
-    "            <ol>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
     "                <li>there are 163 tweets with 0 likes, but all of them have at least 19 or more retweets</li>\n",
     "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
     "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
-    "            </ol>\n",
-    "            </li>\n",
+    "            </ul>\n",
+    "        </li>\n",
     "    </p>\n",
     "    <p>\n",
     "        <li><em>image_predictions_clean:</em>\n",
-    "            <ol>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
     "                <li>inconsistent formatting for the names of potential image matches in p1, p2, and p3</li>\n",
     "                <li>there are many image predictions (even in p1) which are not dogs, sometimes not even animals</li>\n",
     "                <li>there are 64 image predictions where the first two predictions are not dogs</li>\n",
     "                <li>there are 324 image predictions where all three predictions are not dogs</li>\n",
     "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
-    "            </ol>\n",
+    "            </ul>\n",
     "        </li>\n",
     "    </p>\n",
-    "    <li><em>twitter_archive_clean:</em>\n",
-    "        <ol>\n",
-    "            <li>rows which are retweets or replies are unnecessary</li>\n",
-    "            <li>retweet and reply related columns are unnecessary after the related rows are removed</li>           \n",
-    "            <li>tweet_id datatype is int64 and it should be a string</li>\n",
-    "            <li>there are 59 rows missing expanded_urls data</li>\n",
-    "            <li>timestamp is datatype is an object and it should be datetime</li>\n",
-    "            <li>inaccurate rating_numerator and rating_denominator information</li>\n",
-    "            <li>source and expanded_url columns contains unecessary information after the url is stripped from the text</li>\n",
-    "            <li>url column created with split is missing https</li>\n",
-    "            <li>fix remaining timestamp column's name</li>\n",
-    "            <li>timestamp data provides more data than necessary</li>\n",
-    "            <li>3 url rows did not successfully split the text column in Tidiness #2</li>\n",
-    "        </ol>\n",
-    "    </li>\n",
+    "        <li><em>twitter_archive_clean:</em>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
+    "                <li>rows which are retweets or replies are unnecessary</li>\n",
+    "                <li>retweet and reply related columns are unnecessary after the related rows are removed</li>           \n",
+    "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
+    "                <li>there are 59 rows missing expanded_urls data</li>\n",
+    "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
+    "                <li>inaccurate rating_numerator and rating_denominator information</li>\n",
+    "                <li>source and expanded_url columns contains unecessary information after the url is stripped from the text</li>\n",
+    "                <li>url column created with split is missing https</li>\n",
+    "                <li>fix remaining timestamp column's name</li>\n",
+    "                <li>timestamp data provides more data than necessary</li>\n",
+    "                <li>3 url rows did not successfully split the text column in Tidiness #2</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
     "</ul>        "
    ]
   },
@@ -532,24 +538,30 @@
     "<ul>\n",
     "    <p>\n",
     "        <li><em>tweet_data_df_clean:</em>\n",
-    "            <ol>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
     "                <li>tweet_data_df_clean does not need to be in a separate table and should be merged with twitter_archive_clean, the larger complete df</li>\n",
-    "            </ol>\n",
+    "            </ul>\n",
     "        </li>\n",
     "    </p>\n",
     "    <p>\n",
     "        <li><em>image_predictions_clean:</em>\n",
-    "            <ol>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
     "                <li>image_predictions_clean data could be condensed and combined with twitter_archive_clean, though it also may be better off on its own due to the nature of its content, image identification vs basic tweet information. </li>\n",
-    "            </ol>\n",
+    "            </ul>\n",
     "        </li>\n",
     "    </p>\n",
     "        <li><em>twitter_archive_clean:</em>\n",
-    "            <ol>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
     "                <li>dog stages are in four different columns</li>\n",
     "                <li>text column has both a url and the tweet text</li>\n",
     "                <li>combination of twitter_archive_clean and tweet_data_df_clean has duplicated the timestamp column</li>\n",
-    "            </ol>\n",
+    "            </ul>\n",
     "        </li>\n",
     "</ul>        "
    ]
@@ -562,39 +574,45 @@
     "<ul> \n",
     "    <p>\n",
     "        <li><del><em>tweet_data_df_clean:</em>\n",
-    "            <ol>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
     "                <li>there are 163 tweets with 0 likes, but all of them have at least 19 or more retweets</li>\n",
     "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
     "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
-    "            </ol>\n",
+    "            </ul>\n",
     "            </del></li>\n",
     "    </p>\n",
     "    <p>\n",
     "        <li><em>image_predictions_clean:</em>\n",
-    "            <ol>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
     "                <li><del>inconsistent formatting for the names of potential image matches in p1, p2, and p3</del></li>\n",
     "                <li>there are many image predictions (even in p1) which are not dogs, sometimes not even animals</li>\n",
     "                <li>there are 64 image predictions where the first two predictions are not dogs</li>\n",
     "                <li>there are 324 image predictions where all three predictions are not dogs</li>\n",
     "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
-    "            </ol>\n",
+    "            </ul>\n",
     "        </li>\n",
     "    </p>\n",
-    "    <li><em>twitter_archive_clean:</em>\n",
-    "        <ol>\n",
-    "            <li><del>rows which are retweets or replies are unnecessary</del></li>\n",
-    "            <li><del>retweet and reply related columns are unnecessary after the related rows are removed</del></li>           \n",
-    "            <li><del>tweet_id datatype is int64 and it should be a string</del></li>\n",
-    "            <li>there are 59 rows missing expanded_urls data</li>\n",
-    "            <li><del>timestamp is datatype is an object and it should be datetime</del></li>\n",
-    "            <li>inaccurate rating_numerator and rating_denominator information</li>\n",
-    "            <li>source and expanded_url columns contains unecessary information after the url is stripped from the text</li>   \n",
-    "            <li><del>url column created with split is missing https</del></li>\n",
-    "            <li><del>fix remaining timestamp column's name</del></li>\n",
-    "            <li><del>timestamp data provides more data than necessary</del></li>\n",
-    "            <li><del>3 url rows did not successfully split the text column in Tidiness #2</del></li>\n",
-    "        </ol>\n",
-    "    </li>\n",
+    "        <li><em>twitter_archive_clean:</em>\n",
+    "            <ul {\n",
+    "  list-style-type: square;\n",
+    "}>\n",
+    "                <li><del>rows which are retweets or replies are unnecessary</del></li>\n",
+    "                <li><del>retweet and reply related columns are unnecessary after the related rows are removed</del></li>           \n",
+    "                <li><del>tweet_id datatype is int64 and it should be a string</del></li>\n",
+    "                <li>there are 59 rows missing expanded_urls data</li>\n",
+    "                <li><del>timestamp is datatype is an object and it should be datetime</del></li>\n",
+    "                <li>inaccurate rating_numerator and rating_denominator information</li>\n",
+    "                <li>source and expanded_url columns contains unecessary information after the url is stripped from the text</li>   \n",
+    "                <li><del>url column created with split is missing https</del></li>\n",
+    "                <li><del>fix remaining timestamp column's name</del></li>\n",
+    "                <li><del>timestamp data provides more data than necessary</del></li>\n",
+    "                <li><del>3 url rows did not successfully split the text column in Tidiness #2</del></li>\n",
+    "            </ul>\n",
+    "        </li>\n",
     "</ul>        "
    ]
   },
