Reassessing cleaned/combined df

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -510,7 +510,7 @@
     "}>\n",
     "                <li>dog stages are in four different columns</li>\n",
     "                <li>text column has both a url and the tweet text</li>\n",
-    "                <li>combination of twitter_archive_clean and tweet_data_df_clean has duplicated the timestamp column</li>\n",
+    "                <li>combination of twitter_archive_clean and tweet_data_df_clean may duplicate the timestamp column</li>\n",
     "            </ul>\n",
     "        </li>\n",
     "</ul>        "
@@ -527,9 +527,7 @@
     "            <ul {\n",
     "  list-style-type: square;\n",
     "}>\n",
-    "                <li>there are 163 tweets with 0 likes, but all of them have at least 19 or more retweets</li>\n",
-    "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
-    "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
+    "                <li>data quality issues will be addressed after merge with twitter_archive_clean</li>\n",
     "            </ul>\n",
     "        </li>\n",
     "    </p>\n",
@@ -595,7 +593,7 @@
     "}>\n",
     "                <li><del>dog stages are in four different columns</del></li>\n",
     "                <li><del>text column has both a url and the tweet text</del></li>\n",
-    "                <li><del>combination of twitter_archive_clean and tweet_data_df_clean has duplicated the timestamp column</del></li>\n",
+    "                <li><del>combination of twitter_archive_clean and tweet_data_df_clean may duplicate the timestamp column</del></li>\n",
     "            </ul>\n",
     "        </li>\n",
     "</ul>        "
@@ -612,11 +610,9 @@
     "            <ul {\n",
     "  list-style-type: square;\n",
     "}>\n",
-    "                <li>there are 163 tweets with 0 likes, but all of them have at least 19 or more retweets</li>\n",
-    "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
-    "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
+    "                <li>data quality issues will be addressed after merge with twitter_archive_clean</li>\n",
     "            </ul>\n",
-    "            </del></li>\n",
+    "        </del></li>\n",
     "    </p>\n",
     "    <p>\n",
     "        <li><em>image_predictions_clean:</em>\n",
@@ -660,7 +656,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -790,7 +788,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -817,7 +817,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -922,7 +924,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -953,7 +957,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -984,7 +990,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1241,7 +1249,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1279,7 +1289,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1542,7 +1554,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1577,7 +1591,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1700,7 +1716,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1731,7 +1749,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -1994,7 +2014,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2257,7 +2279,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2520,7 +2544,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -2791,7 +2817,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -3002,7 +3028,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3042,7 +3070,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -3244,7 +3274,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -3353,7 +3385,7 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -3497,7 +3529,7 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -4135,7 +4167,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -6568,7 +6602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 10. source and expanded_urls columns contain unecessary information after the url is stripped from the text"
+    "### 10. source column contains unecessary information"
    ]
   },
   {
@@ -6655,6 +6689,66 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Reassessing twitter_archive_clean df after initial tidiness and quality cleaning steps of the 3 original dfs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive_clean[twitter_archive_clean['rating_denominator'] != 10].tweet_id.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35      https://t.co/gzLHboL7Sk\n",
+       "42      https://t.co/uF3pQ8Wubj\n",
+       "72      https://t.co/9uABQXgjwa\n",
+       "83      https://t.co/8yoc1CNTsu\n",
+       "88      https://t.co/PFp4MghzBW\n",
+       "                 ...           \n",
+       "1807    https://t.co/uPXBXS1XNb\n",
+       "1818    https://t.co/APvLqbEhkF\n",
+       "1834    https://t.co/ICNIjSkrXs\n",
+       "1916    https://t.co/SroTpI6psB\n",
+       "2212    https://t.co/roqIxCvEB3\n",
+       "Name: url, Length: 123, dtype: object"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twitter_archive_clean[twitter_archive_clean.p1.isnull()].url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
