Fixed weird denominators and their associated numerators for the rating categories

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -75,12 +75,14 @@
     "                <li>in_reply_to_status_id, in_reply_to_user_id, retweeted_status_id, retweeted_status_user_id, retweeted_status_timestamp columns are no longer necessary</li>           \n",
     "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
     "                <li>dog_stage datatype is a string and it should be a category</li>\n",
-    "                <li>3 rows do not have expanded_urls data</li>\n",
+    "                <li>some rows do not have expanded_urls data</li>\n",
     "                <li>inconsistent formatting for the names of potential image matches in p1, p2, and p3</li>\n",
     "                <li>source column contains unecessary information</li>\n",
-    "                <li>123 rows do not have image data also found in image_predictions_clean</li>\n",
-    "                <li>7 rows do not have like or retweet information</li> \n",
-    "                <li> rating_denominator  is not 10</li>\n",
+    "                <li>some rows do not have image data also found in image_predictions_clean</li>\n",
+    "                <li>some rows do not have like or retweet information</li> \n",
+    "                <li>rating_denominator is sometimes not 10 (no rating in text)</li>\n",
+    "                <li>rating_denominator is sometimes not 10 (second fraction-like string in text)</li>\n",
+    "                <li>rating_denominator is sometimes not 10 (multiplied by dogs)</li>\n",
     "            </ul>\n",
     "        </li>\n",
     "</ul>        "
