Cleaned numerator errors, worked on expanded_urls column, and dealt with some formatting

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -8,30 +8,24 @@
     "<ul>\n",
     "    <p>\n",
     "        <li><em>tweet_data_df_clean:</em>\n",
-    "            <ul {\n",
-    "  list-style-type: square;\n",
-    "}>\n",
+    "            <ol>\n",
     "                <li>tweet_data_df_clean does not need to be in separate dfs</li>\n",
-    "            </ul>\n",
+    "            </ol>\n",
     "        </li>\n",
     "    </p>\n",
     "    <p>\n",
     "        <li><em>image_predictions_clean:</em>\n",
-    "            <ul {\n",
-    "  list-style-type: square;\n",
-    "}>\n",
+    "            <ol>\n",
     "                <li>image_predictions_clean and twitter_archive_clean do not need to be separate dfs</li>\n",
-    "            </ul>\n",
+    "            </ol>\n",
     "        </li>\n",
     "    </p>\n",
     "        <li><em>twitter_archive_clean:</em>\n",
-    "            <ul {\n",
-    "  list-style-type: square;\n",
-    "}>\n",
+    "            <ol>\n",
     "                <li>text column has both a url and the tweet text</li>\n",
     "                <li>combination of twitter_archive_clean and tweet_data_df_clean has duplicated the timestamp column</li>\n",
     "                <li>four columns are used for each dog stage</li>\n",
-    "            </ul>\n",
+    "            </ol>\n",
     "        </li>\n",
     "</ul>"
    ]
@@ -57,17 +51,11 @@
     "  list-style-type: square;\n",
     "}>\n",
     "                <li>data quality issues will be addressed after merge with twitter_archive_clean</li>                \n",
-    "                <li>there are many image predictions (even in p1) which are not dogs, sometimes not even animals</li>\n",
-    "                <li>there are 64 image predictions where the first two predictions are not dogs</li>\n",
-    "                <li>there are 324 image predictions where all three predictions are not dogs</li>\n",
-    "                <li>tweet_id datatype is int64 and it should be a string</li>\n",
     "            </ul>\n",
     "        </li>\n",
     "    </p>\n",
     "        <li><em>twitter_archive_clean:</em>\n",
-    "            <ul {\n",
-    "  list-style-type: square;\n",
-    "}>\n",
+    "            <ol>\n",
     "                <li>timestamp_x provides more data than necessary and has unecessary characters in name from merge</li>\n",
     "                <li>timestamp is datatype is an object and it should be datetime</li>\n",
     "                <li>duplicated timestamp column, timestamp_x</li>\n",
@@ -83,7 +71,12 @@
     "                <li>rating_denominator is sometimes not 10 (no rating in text)</li>\n",
     "                <li>rating_denominator is sometimes not 10 (second fraction-like string in text)</li>\n",
     "                <li>rating_denominator is sometimes not 10 (multiplied by dogs)</li>\n",
-    "            </ul>\n",
+    "                <li>rating_numerator is not held to standard scale due to a holiday (1776) and an alternative type of dog (420) for tweet_id = ('670842764863651840', '749981277374128128')</li>\n",
+    "                <li>rating_numerator is incorrect due to decimal in rating for tweet_id = ('786709082849828864', '778027034220126208', '680494726643068929')</li>\n",
+    "                <li>expanded_urls sometimes repeats the url one or many times</li>\n",
+    "                <li>some expanded_urls do not point to tweets</li>\n",
+    "                <li>many names are missing or misidentified</li>\n",
+    "            </ol>\n",
     "        </li>\n",
     "</ul>        "
    ]
