Fixed error with twitter_archive_master creation and dropped img_num column in another data quality cleaning step

--- a/Quality and Tidiness Copy.ipynb
+++ b/Quality and Tidiness Copy.ipynb
@@ -74,12 +74,26 @@
     "                <li>rating_numerator is not held to standard scale due to a holiday (1776) and an alternative type of dog (420) for tweet_id = ('670842764863651840', '749981277374128128')</li>\n",
     "                <li>rating_numerator is incorrect due to decimal in rating for tweet_id = ('786709082849828864', '778027034220126208', '680494726643068929')</li>\n",
     "                <li>expanded_urls sometimes repeats the url one or many times</li>\n",
-    "                <li>some expanded_urls do not point to tweets</li>\n",
     "                <li>many names are missing or misidentified</li>\n",
+    "                <li>img_num column is not useful for analysis</li>\n",
     "            </ol>\n",
     "        </li>\n",
     "</ul>        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
