Started wrangle_report

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -12429,7 +12429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. What is the average dog rating for the cleaned data and what does the dog rating distribution look like?"
+    "### 1. What is the average dog rating for the cleaned data and how many tweets does each dog rating have?"
    ]
   },
   {
